# Pawn-MC

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  options.md
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/rvdjv/pawnmc/: CompilerConfig.kt  FileBrowserDialog.kt  IncludePathDetector.kt  MainActivity.kt  PawnCompiler.kt  PawnDialog.kt  SettingsActivity.kt  UpdateChecker.kt  UriUtils.kt
app/src/main/res/anim/: dialog_slide_down.xml  dialog_slide_up.xml
app/src/main/res/drawable/: bg_dialog.xml  bg_dialog_icon.xml  ic_arrow_up.xml  ic_chevron_right.xml  ic_edit.xml  ic_file_code.xml  ic_folder_open.xml  ic_info.xml  ic_warning.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  dialog_file_browser.xml  dialog_pawn.xml  item_breadcrumb.xml  item_file_entry.xml
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
